# Apropos

./: .gitignore  CITATION.cff  README.md  pyproject.toml  setup.py
apropos/: __init__.py
apropos/bench/: base.py
apropos/bench/bigcodebench/: main.py  single_step_dag.py
apropos/bench/craftax/: game_dynamics.py  game_information.py  test.py
apropos/bench/crafter/: game_dynamics.py  game_information.py  recording_utils.py  spin_up.sh  test.py
apropos/bench/gradeschool_math/: main.py
apropos/bench/hendryks_math/: main.py
apropos/bench/web_arena/: demo.py  install.sh  readme.md
apropos/src/bench/: __init__.py  base.py
apropos/src/core/: __init__.py
apropos/src/lms/: api_caching_fxns.py  cache_init.py  helpers.py
apropos/src/optimizers/: base.py
apropos/src/programs/: dag.py  prompt.py
apropos/src/utils/: internal_dataset.py  program_grounding.py
bench/: base.py
bench/bigcodebench/: main.py  single_step_dag.py
bench/bigcodebench/backends/: danger.py  docker.py  modal.py
bench/gradeschool_math/: main.py
bench/gradeschool_math/dags/: plan_execute.py  single_step.py
bench/hendryks_math/: main.py
bench/hendryks_math/dags/: plan_execute.py  single_step.py
examples/: hello_world.py  quick_start.py  quick_start_miprov2.py
src/lms/: api_caching_fxns.py  cache_init.py  caching.py  helpers.py
src/lms/vendors/: anthropic_api.py  base.py  deepmind_api.py  deepseek_api.py  groq_api.py  ollama_api.py  openai_ai_api.py  openai_api.py  openai_like.py  together_api.py
src/optimizers/: base.py
src/optimizers/baselines/: bffsrs.py
src/programs/: dag.py  prompt.py
(+73 files in other folders)
