[tool.poetry]
name = "apropos"
version = "0.1.0"
description = ""
authors = ["Josh Purtell <jmvpurtell@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
networkx = "^3.3"
pydantic = "^2.8.2"
regex = "^2024.7.24"
loguru = "^0.7.2"
ruff = "^0.5.5"
backoff = "^2.2.1"
openai = "^1.37.1"
diskcache = "^5.6.3"
instructor = "^1.3.7"
datasets = "^2.20.0"
groq = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
