[project]
name = "apropos-ai"
version = "0.1.14"
description = "Learning algorithms for production language model programs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "networkx>=3.3",
    "pydantic>=2.8.2",
    "regex>=2024.7.24",
    "loguru>=0.7.2",
    "ruff>=0.5.5",
    "backoff>=2.2.1",
    "openai>=1.37.1",
    "diskcache>=5.6.3",
    "instructor>=1.3.7",
    "datasets>=2.20.0",
    "groq>=0.9.0",
    "twine>=5.1.1",
    "setuptools>=72.2.0",
    "wheel>=0.44.0",
    "termcolor>=2.4.0",
    "gym>=0.26.2",
    "tiktoken>=0.7.0",
    "google-generativeai>=0.7.2",
    "jax>=0.4.31",
    "craftax>=1.4.3",
    "beartype>=0.18.5",
    "playwright>=1.46.0",
    "build>=1.2.1",
    "mdurl>=0.1.2",
    "anthropic>=0.34.1",
    "together>=1.2.7",
    "docker>=7.1.0",
    "modal>=0.64.49",
    "craftaxlm==0.0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["apropos"]
